
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_12__ TYPE_2__ ;
typedef struct TYPE_11__ TYPE_1__ ;


struct TYPE_12__ {int libctx; } ;
struct TYPE_11__ {scalar_t__ Z_is_one; } ;
typedef TYPE_1__ EC_POINT ;
typedef TYPE_2__ EC_GROUP ;
typedef int BN_CTX ;
typedef int BIGNUM ;


 int BN_CTX_end (int *) ;
 int BN_CTX_free (int *) ;
 int * BN_CTX_get (int *) ;
 int * BN_CTX_new_ex (int ) ;
 int BN_CTX_start (int *) ;
 int EC_F_EC_GFP_SIMPLE_MAKE_AFFINE ;
 int EC_POINT_get_affine_coordinates (TYPE_2__ const*,TYPE_1__*,int *,int *,int *) ;
 scalar_t__ EC_POINT_is_at_infinity (TYPE_2__ const*,TYPE_1__*) ;
 int EC_POINT_set_affine_coordinates (TYPE_2__ const*,TYPE_1__*,int *,int *,int *) ;
 int ECerr (int ,int ) ;
 int ERR_R_INTERNAL_ERROR ;

int ec_GFp_simple_make_affine(const EC_GROUP *group, EC_POINT *point,
                              BN_CTX *ctx)
{
    BN_CTX *new_ctx = ((void*)0);
    BIGNUM *x, *y;
    int ret = 0;

    if (point->Z_is_one || EC_POINT_is_at_infinity(group, point))
        return 1;

    if (ctx == ((void*)0)) {
        ctx = new_ctx = BN_CTX_new_ex(group->libctx);
        if (ctx == ((void*)0))
            return 0;
    }

    BN_CTX_start(ctx);
    x = BN_CTX_get(ctx);
    y = BN_CTX_get(ctx);
    if (y == ((void*)0))
        goto err;

    if (!EC_POINT_get_affine_coordinates(group, point, x, y, ctx))
        goto err;
    if (!EC_POINT_set_affine_coordinates(group, point, x, y, ctx))
        goto err;
    if (!point->Z_is_one) {
        ECerr(EC_F_EC_GFP_SIMPLE_MAKE_AFFINE, ERR_R_INTERNAL_ERROR);
        goto err;
    }

    ret = 1;

 err:
    BN_CTX_end(ctx);
    BN_CTX_free(new_ctx);
    return ret;
}
